--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,7 +8,7 @@ variables:
   buildConfiguration: 'Release'
 
 steps:
-- task: UseDotNet@2 ##########
+- task: UseDotNet@22 ########## 2 not 22
   displayName: 'Use .NET SDK 6.x'
   inputs:
     packageType: sdk
