Add build tasks1

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,7 +8,7 @@ variables:
   buildConfiguration: 'Release'
 
 steps:
-- task: UseDotNet@32 # 2 not 22
+- task: UseDotNet@2
   displayName: 'Use .NET SDK 6.x'
   inputs:
     packageType: sdk
