fix for Sass assets job

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,7 +12,7 @@ steps:
   displayName: 'Use .NET SDK 6.x'
   inputs:
     packageType: sdk
-    version: '6.x'
+    version: '9.x'
 
 - task: Npm@1
   displayName: 'Run npm install'
@@ -20,7 +20,8 @@ steps:
     command: 'install'
     verbose: false
 
-- script: './node_modules/.bin/node-sass Tailspin.SpaceGame.Web/wwwroot --output Tailspin.SpaceGame.Web/wwwroot'
+- script: 'npx sass Tailspin.SpaceGame.Web/wwwroot:Tailspin.SpaceGame.Web/wwwroot'
+#- script: 'npx sass Tailspin.SpaceGame.Web/wwwroot --output Tailspin.SpaceGame.Web/wwwroot'
   displayName: 'Compile Sass assets'
 
 - task: gulp@1
