--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -27,7 +27,7 @@ steps:
 - task: gulp@1
   displayName: 'Run gulp tasks'
   inputs:
-    gulpFile: 'gulp.js'
+    gulpFile: 'mslearn-tailspin-spacegame-web/gulp.js'
 
 - script: 'echo "$(Build.DefinitionName), $(Build.BuildId), $(Build.BuildNumber)" > buildinfo.txt'
   displayName: 'Write build info'
