--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,11 +20,19 @@ steps:
     command: 'install'
     verbose: false
 
+- task: Npm@1
+  displayName: 'Install Gulp CLI Globally'
+  inputs:
+    command: 'custom'
+    workingDir: '$(Build.SourcesDirectory)
+    customCommand: 'npm install -g gulp-cli'
+
 - script: 'npx sass Tailspin.SpaceGame.Web/wwwroot:Tailspin.SpaceGame.Web/wwwroot'
 #- script: 'npx sass Tailspin.SpaceGame.Web/wwwroot --output Tailspin.SpaceGame.Web/wwwroot'
   displayName: 'Compile Sass assets'
 
 - task: gulp@1
+#- script: ".node_modules/.bin/gulp"
   displayName: 'Run gulp tasks'
   inputs:
     gulpFile: 'gulp.js'
