added gulp-cli install task

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,7 +24,7 @@ steps:
   displayName: 'Install Gulp CLI Globally'
   inputs:
     command: 'custom'
-    workingDir: '$(Build.SourcesDirectory)
+    workingDir: '$(Build.SourcesDirectory)'
     customCommand: 'npm install -g gulp-cli'
 
 - script: 'npx sass Tailspin.SpaceGame.Web/wwwroot:Tailspin.SpaceGame.Web/wwwroot'
