--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,18 +15,11 @@ steps:
     version: '9.x'
 
 - task: Npm@1
-  displayName: 'Run npm install'
+  displayName: 'Run npm install and install Gulp CLI globally'
   inputs:
-    command: 'install'
+    command: 'custom'
     verbose: false
-
-#- task: Npm@1
-- script: 'npm install -g gulp-cli'
-  displayName: 'Install Gulp CLI Globally'
-  # inputs:
-  #   command: 'custom'
-  #   workingDir: '$(Build.SourcesDirectory)'
-  #   customCommand: 'install -g gulp-cli'
+    customCommand: 'install && npm install -g gulp-cli'
 
 - script: 'npx sass Tailspin.SpaceGame.Web/wwwroot:Tailspin.SpaceGame.Web/wwwroot'
 #- script: 'npx sass Tailspin.SpaceGame.Web/wwwroot --output Tailspin.SpaceGame.Web/wwwroot'
