--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,22 +20,24 @@ steps:
     command: 'install'
     verbose: false
 
-- script: 'npx install gulp-cli'
-  displayName: 'Install Gulp CLI Globally'
+# - script: 'npx install gulp-cli'
+#   displayName: 'Install Gulp CLI Globally'
 
 - script: 'npx sass Tailspin.SpaceGame.Web/wwwroot:Tailspin.SpaceGame.Web/wwwroot'
 #- script: 'npx sass Tailspin.SpaceGame.Web/wwwroot --output Tailspin.SpaceGame.Web/wwwroot'
   displayName: 'Compile Sass assets'
 
-- task: gulp@1
-#- script: ".node_modules/.bin/gulp"
-  displayName: 'Run gulp tasks'
-  inputs:
-    gulpFile: 'gulp.js'
+
 
 - script: 'echo "$(Build.DefinitionName), $(Build.BuildId), $(Build.BuildNumber)" > buildinfo.txt'
   displayName: 'Write build info'
   workingDirectory: Tailspin.SpaceGame.Web/wwwroot
+
+# - task: gulp@1
+# #- script: ".node_modules/.bin/gulp"
+#   displayName: 'Run gulp tasks'
+#   inputs:
+#     gulpFile: 'gulp.js'
 
 - task: DotNetCoreCLI@2
   displayName: 'Restore project dependencies'
