--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,6 +24,9 @@ steps:
   displayName: 'Compile Sass assets'
 
 - task: gulp@1
+  inputs:
+    gulpFile: 'gulpfile.js'
+    #targets: 'minify'
   displayName: 'Run gulp tasks'
 
 - script: 'echo "$(Build.DefinitionName), $(Build.BuildId), $(Build.BuildNumber)" > buildinfo.txt'
