--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,11 +23,11 @@ steps:
 - script: 'npx sass Tailspin.SpaceGame.Web/wwwroot:Tailspin.SpaceGame.Web/wwwroot'
   displayName: 'Compile Sass assets'
 
-- task: gulp@1
-  inputs:
-    gulpFile: 'gulpfile.js'
-    #targets: 'minify'
-  displayName: 'Run gulp tasks'
+# - task: gulp@1
+#   inputs:
+#     gulpFile: 'gulpfile.js'
+#     #targets: 'minify'
+#   displayName: 'Run gulp tasks'
 
 - script: 'echo "$(Build.DefinitionName), $(Build.BuildId), $(Build.BuildNumber)" > buildinfo.txt'
   displayName: 'Write build info'
