--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,7 +10,7 @@ pool:
 variables:
   buildConfiguration: 'Release'
   wwwrootDir: 'Tailspin.SpaceGame.Web/wwwroot'
-  dotnetSdkVersion: '8.x'
+  dotnetSdkVersion: '9.x'
 
 steps:
 
@@ -50,7 +50,7 @@ steps:
 - task: UseDotNet@2
   displayName: 'Use .NET SDK 6.0.24'
   inputs:
-    version: '8.0'
+    version: '9.x'
 
 - task: DotNetCoreCLI@2
   displayName: 'Run unit tests - $(buildConfiguration)'
