--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,18 +24,18 @@ steps:
   inputs:
     verbose: false
 
-# - script: 'npx sass Tailspin.SpaceGame.Web/wwwroot:Tailspin.SpaceGame.Web/wwwroot'
-#   displayName: 'Compile Sass assets'
+- script: 'npx sass Tailspin.SpaceGame.Web/wwwroot:Tailspin.SpaceGame.Web/wwwroot'
+  displayName: 'Compile Sass assets'
 
 # - script: 'npm install -g gulp@1'
 
-- task: gulp@1
-  displayName: 'Run gulp tasks'
-  inputs:
-    gulpFile: 'gulpfile.js'
-    # targets: 'min'
-    # arguments: '--env production'
-    # workingDir: $(wwwrootDir)
+# - task: gulp@1
+#   displayName: 'Run gulp tasks'
+#   inputs:
+#     gulpFile: 'gulpfile.js'
+#     # targets: 'min'
+#     # arguments: '--env production'
+#     # workingDir: $(wwwrootDir)
 
 - script: 'echo "$(Build.DefinitionName), $(Build.BuildId), $(Build.BuildNumber)" > buildinfo.txt'
   displayName: 'Write build info'
